--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+************************ DARK MODE ************************
+
 set-option -g prefix C-j
 
 #set-option -g mouse on
@@ -17,4 +19,32 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 set-option -g history-limit 5000
 
 # fast config reload
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf sourced"
+
+
+
+
+
+************************ LIGHT MODE ************************
+
+set-option -g prefix C-j
+
+# Uncomment to enable mouse support
+#set-option -g mouse on
+
+set -g status-position bottom
+set -g status-bg colour252       
+set -g status-fg colour235        
+set -g status-left ''
+set -g status-right '#[fg=colour239,bg=colour248,bold] %d/%m #[fg=colour239,bg=colour244,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+setw -g mode-keys vi
+
+setw -g window-status-current-format ' #I#[fg=colour235]:#[fg=colour232]#W#[fg=colour25]#F '
+setw -g window-status-format ' #I#[fg=colour242]:#[fg=colour235]#W#[fg=colour246]#F '
+
+set-option -g history-limit 5000
+
+# Fast config reload
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf sourced"
